--- a/.github/workflows/update-beaches.yml
+++ b/.github/workflows/update-beaches.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Run update script
         run: python update_all_beaches.py
 
-      - name: Commit and push latest_beaches.json
+      - name: Commit and push updated beach data
         run: |
-          if [[ -n "$(git status --porcelain latest_beaches.json)" ]]; then
+          if [[ -n "$(git status --porcelain latest_beaches.json beaches/)" ]]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add latest_beaches.json
+            git add latest_beaches.json beaches/
             git commit -m "Update beach data $(date -u '+%Y-%m-%d %H:%M UTC')"
             git push
           else
